Regular Exam - 02.08.2025